# TrackuribohInventory

./: .gitignore  .pre-commit-config.yaml  @trackuriboh-rules.mdc  Dockerfile  Makefile  README.md  codex-tcg-rules.mdc  database.py  deploy_api.sh  deploy_cron.sh  deploy_fly.sh  environment.py  fly.toml  main.py  package-lock.json  package.json  pyproject.toml  requirements-lock.txt  requirements.txt  settings.py  test_process_task_queue.py  trackuriboh-rules.mdc
.cursor/rules/: trackuriboh-rules.json  trackuriboh-rules.mdc
alembic/: env.py
alembic/versions/: 019da03ebf26_add_shipping_price_to_transaction.py  09330d1456d2_rename_currency_code_to_currency.py  18be0731b7c8_remove_skulatestpricedata_.py  1945457d0ed1_.py  1a01b5e0bfb2_add_performance_backed_full_text_search_.py  2a304ad65629_merge_heads_for_is_draft_addition.py  2ea948727dbe_remove_language_from_product_variant.py  3e58625477c4_create_sku_market_data_sync_state_.py  4811425b2f6f_add_composite_ix_sku_price_snapshot_sku_.py  61ef3d11077e_.py  c75876a39c72_.py  (+28 more)
app/: Dockerfile  main.py
backfills/: backfill_product_search_metadata.py  backfill_product_variant_epid.py  backfill_sale_transactions_with_shipping.py
core/: auth.py  database.py  environment.py
cron/: Dockerfile  Dockerfile.update_catalog  scheduler.py  telemetry.py  update_catalog_db.py
models/: catalog.py
scripts/: backfill_platform.py  backfill_tcgplayer_order_ids.py  calc_capital_gains_by_platform.py  calculate_platform_sales_and_profit.py  calculate_total_profit.py  delete_transactions.sql  find_missing_paypal_sales.py  find_missing_tcgplayer_sales.py  import_purchase_orders.py  reprocess_sales.py  resolve_ebay_epid.py
services/: tcgplayer_catalog_service.py
tasks/: update_catalog_db.py
terraform/: ecr_lifecycle.tf  ecs.tf  events.tf  iam.tf  network.tf  rds.tf  secrets.tf  variables.tf
tmp/: sales-history-spec.md
utils/: paginate.py  workers.py
web/: .eslintrc.json  components.json  next.config.js  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
(+363 files in other folders)
