[project]
name = "codex-tcg"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "uvicorn>=0.30.6",
    "sqlalchemy>=2.0.32",
    "pydantic-settings>=2.4.0",
    "psycopg2-binary>=2.9.9",
    "aiohttp>=3.10.5",
    "uuid7>=0.1.0",
    "sentry-sdk>=2.35.0",
    "apscheduler>=3.10.4",
    "httpx>=0.27.2",
    "alembic>=1.14.0",
    "pytz>=2025.1",
    "supabase>=2.9.1",
    "boto3>=1.34.0",
    "playwright>=1.47.0",
    "numpy>=1.26",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff",
    "pre-commit",
    # Add other dev tools like black if not managed elsewhere
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app", "core"]
